# tuberculo

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  REUSE.toml  diesel.toml
migrations/2024-08-09-131253_create_queue/: down.sql  up.sql
migrations/2024-08-09-165838_create_videos/: down.sql  up.sql
migrations/2024-08-10-112357_add_attempts_to_queue/: down.sql  up.sql
src/: database.rs  downloader.rs  endpoints.rs  main.rs  schema.rs
src/database/: memory.rs  sqlite3.rs
src/endpoints/: enqueue.rs  results.rs  root.rs  watch.rs
templates/: application.html  enqueue.html  results.html  root.html  watch.fragment.html  watch.html
